--- a/index.html
+++ b/index.html
@@ -52,7 +52,21 @@
 								 data-separator-vertical="^\r?\n----\r?\n$"
 								 data-transition="convex">
 				</section>
+				<section>
+					<h6>Another Sample Grid...</h6>
+					<p>(turn on grid inspector to view area names)</p>
+					<div class="grid-container-two">
+						<div class="new-grid-item item-a"></div>
+						<div class="new-grid-item item-b"></div>
+						<div class="new-grid-item item-c"></div>
+						<div class="new-grid-item item-d"></div>
+					</div>
+				</section>
 				<section data-markdown="./slides/04-itemProperties.md" 
+								 data-separator-vertical="^\r?\n----\r?\n$"
+								 data-transition="convex">
+				</section>
+				<section data-markdown="./slides/05-summary.md" 
 								 data-separator-vertical="^\r?\n----\r?\n$"
 								 data-transition="convex">
 				</section>
